--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>classwin-editor</title>
+    <script src="https://apis.google.com/js/api.js"></script>
   </head>
   <body>
     <div id="app"></div>
